--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, macos-15]
+        # os: [macos-13, macos-14, macos-15]
+        os: [macos-14] # dev testing
         backend: [llama-cpp-metal]
     steps:
       - name: Checkout code
@@ -30,18 +31,18 @@ jobs:
       - name: Cache Nexa model files
         uses: actions/cache@v4
         with:
-          path: ~/.cache/nexa/models/bmV4YW1sL1F3ZW4zLTAuNkI=
-          key: qwen3-0.6b-gguf-${{ runner.os }}-${{ hashFiles('**/test.yml') }}
+          path: ~/.cache/models/Qwen3-0.6B-Q8_0.gguf
+          key: Qwen3-0.6B-Q8_0.gguf
           restore-keys: |
-            qwen3-0.6b-gguf-${{ runner.os }}-
+            Qwen3-0.6B-Q8_0.gguf
 
       - name: Download model
         shell: bash
         run: |
-          mkdir -p ~/.cache/nexa/models/bmV4YW1sL1F3ZW4zLTAuNkI=
-          if [ ! -f ~/.cache/nexa/models/bmV4YW1sL1F3ZW4zLTAuNkI=/Qwen3-0.6B-Q8_0.gguf ]; then
-            wget -nv -O ~/.cache/nexa/models/bmV4YW1sL1F3ZW4zLTAuNkI=/Qwen3-0.6B-Q8_0.gguf \
-              https://huggingface.co/nexaml/Qwen3-0.6B/resolve/main/Qwen3-0.6B-Q8_0.gguf
+          MODEL_PATH="$HOME/.cache/models/Qwen3-0.6B-Q8_0.gguf"
+          if [ ! -f "$MODEL_PATH" ]; then
+            mkdir -p "$(dirname "$MODEL_PATH")"
+            wget -nv -O "$MODEL_PATH" https://huggingface.co/nexaml/Qwen3-0.6B/resolve/main/Qwen3-0.6B-Q8_0.gguf
           else
             echo "Model already cached, skip download."
           fi
