optimze(tests): test macos-15 only to speed up.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, macos-15]
+        os: [macos-15]
         backend: [llama-cpp-metal]
     steps:
       - name: Checkout code
