--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -52,7 +52,7 @@ jobs:
           include-hidden-files: true
 
   build-installer:
-    name: Build Windows Installer
+    name: Build Windows Installer & Release
     runs-on: sdk-windows-8-core-2
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: build-cli
@@ -151,18 +151,12 @@ jobs:
             -td sha256 `
             "artifacts/nexa-cli_windows-setup_${{ env.VERSION }}.exe"
 
-      - name: Upload Installer
-        uses: actions/upload-artifact@v4
-        with:
-          name: nexa-cli_windows-setup_${{ env.VERSION }}
-          path: artifacts/nexa-cli_windows-setup_${{ env.VERSION }}.exe
-
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
           repository: zhiyuan8/homebrew-go-release
-          files: |
-            artifacts/nexa-cli_windows-setup_${{ env.VERSION }}.exe
+          tag_name: ${{ env.VERSION }}
+          files: artifacts/nexa-cli_windows-setup_${{ env.VERSION }}.exe
         env:
           GITHUB_TOKEN: ${{ secrets.NEXASDK_RELEASE_TOKEN }}
