--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Detect Commit Hash
         if: github.event_name == 'workflow_dispatch'
-        run: echo "VERSION=${{ github.sha }}" >> $env:GITHUB_ENV
+        run: |
+          $shortHash = "${{ github.sha }}".Substring(0, 7)
+          echo "VERSION=$shortHash" >> $env:GITHUB_ENV
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -48,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nexa-cli_${{ matrix.os }}_${{ matrix.backend }}
-          path: ./build
+          path: build
           include-hidden-files: true
 
   build-installer:
