--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -44,6 +44,22 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nexa-cli_${{ matrix.os }}_${{ matrix.backend }}
+          name: "nexa-cli_${{ matrix.os }}_${{ matrix.backend }}"
           path: build
           include-hidden-files: true
+
+      - name: Package Release
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          tar -czf "nexa-cli_${{ matrix.os }}_${{ matrix.backend }}_${{ env.VERSION }}.tar.gz" -C build .
+
+      - name: Create GitHub Release
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v2
+        with:
+          repository: ${{ env.RELEASE_REPO }}
+          files: "nexa-cli_${{ matrix.os }}_${{ matrix.backend }}_${{ env.VERSION }}.tar.gz"
+          tag_name: ${{ env.VERSION }}
+        env:
+          RELEASE_REPO: zhiyuan8/homebrew-go-release
+          GITHUB_TOKEN: ${{ secrets.NEXASDK_RELEASE_TOKEN }}
