--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -161,4 +161,4 @@ jobs:
           tag_name: ${{ env.VERSION }}
           files: artifacts/nexa-cli_windows-setup_${{ env.VERSION }}.exe
         env:
-          GITHUB_TOKEN: ${{ secrets.NEXASDK_RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
