--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -60,6 +60,7 @@ jobs:
           repository: ${{ env.RELEASE_REPO }}
           files: "nexa-cli_${{ matrix.os }}_${{ matrix.backend }}_${{ env.VERSION }}.tar.gz"
           tag_name: ${{ env.VERSION }}
+          make_latest: true
         env:
           RELEASE_REPO: zhiyuan8/homebrew-go-release
           GITHUB_TOKEN: ${{ secrets.NEXASDK_RELEASE_TOKEN }}
