feat: add update for MacOS
ci: remove forget package in macos

fix: remove syscall attribute

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -157,7 +157,7 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
-          repository: NexaAI/nexa-sdk
+          repository: zhiyuan8/homebrew-go-release
           tag_name: ${{ env.VERSION }}
           files: artifacts/nexa-cli_windows-setup.exe
           make_latest: true
